# cpp_dev

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
include/: myabs.hpp
src/: myabs.cpp
test/: gtest_main.cpp
